# rd_filters

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Notes.txt  README.md  pyproject.toml  rd_filters.py  rd_filters.sh  rules.json  setup.py  tox.ini
.github/workflows/: publish.yaml  pull-test.yaml  push-main.yaml
docs/: notes.md
rd_filters/: rd_filters.py
rd_filters/data/: alert_collection.csv  alerts.csv  descriptors.json  rules.json
tests/: test_rdfilter.py
tests/data/: HIV.smi
